# Technopark_C_IZ2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.c  matrix.c  matrix.h  run.c  tests.cpp
